[gd_scene load_steps=8 format=3 uid="uid://c4li4xf6h5jir"]

[ext_resource type="Script" uid="uid://c2fcpu5fbqxha" path="res://Turret/turret.gd" id="1_5kpma"]
[ext_resource type="PackedScene" uid="uid://c0whtdg6qi4qf" path="res://Turret/projectile.tscn" id="2_djkev"]
[ext_resource type="PackedScene" uid="uid://bp6k5w6hqupog" path="res://Assets/Cannon.glb" id="3_r754r"]
[ext_resource type="PackedScene" uid="uid://e4082lm2oy4u" path="res://Assets/TurretBase.glb" id="4_2avlq"]

[sub_resource type="Animation" id="Animation_djkev"]
resource_name = "Fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.3, -0.6), Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_ttsi1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TurretBase/TurretTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.290586, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ttsi1"]
_data = {
&"Fire": SubResource("Animation_djkev"),
&"RESET": SubResource("Animation_ttsi1")
}

[node name="Turret" type="Node3D"]
script = ExtResource("1_5kpma")
projectile = ExtResource("2_djkev")

[node name="TurretBase" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="TurretTop" type="Node3D" parent="TurretBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.290586, 0)

[node name="Cannon" parent="TurretBase/TurretTop" instance=ExtResource("3_r754r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ShootAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ttsi1")
}

[node name="TurretBase2" parent="." instance=ExtResource("4_2avlq")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
